# naime-hybrid-moe

./: .gitignore  DIAGNOSIS_SLOT_COLLAPSE.md  NOTICE  README.md  SKILL.md  pyproject.toml  requirements.txt
configs/: phase1_safe_params.md  workspace.example.json
docs/: CODING_STANDARDS.md  ENVIRONMENT.md  REMOTE_4090_OPERATIONS.md  TRAINING.md
docs/architecture/: ARCHITECTURE_V0.md  IMPLEMENTATION_ROADMAP.md  NAIME_V3.md  NAIME_V5_PLAN.md  NAIME_V6.md  PROPOSAL_V1.md  SEMANTIC_ROUTER_2.md  VNEXT_WORLD_MODEL_ARCHITECTURE.md
docs/experiments/: EXPERIMENT_PLAN_V0.md  PHASE2_PLAN.md  SCALE_UP_PILOT.md
docs/research-notes/: FRONTIER_SYNTHESIS.md  NAIME_AND_FRONTIER_RESEARCH.md  NAIME_DATA_AUDIT.md
scripts/: check_style.ps1  clean_checkpoints.ps1  diagnose_nan.py  env.ps1  eval.ps1  harden_remote_acl.ps1  infer.ps1  launch_train_detached.ps1  launch_train_detached.py  load_workspace_config.ps1  monitor_training_events.py  naime_guardian.c  preflight.ps1  prepare_fineweb_edu_1b.ps1  prepare_pretrain_corpus.ps1  prepare_pretrain_corpus.py  prepare_wikitext103.py  profile_compressor.py  progress_demo.py  remote_agent.py  remote_ctl.py  run_smoke.ps1  run_tests.ps1  setup_env.ps1  shutdown_guard.ps1  smoke_forward.py  ssh_cmd.ps1  sync_to_remote.ps1  train.ps1  train_model.ps1  transfer_dataset_to_remote.ps1  transfer_venv_to_remote.ps1  tune_gate.ps1  watch_remote.ps1
src/naime_hybrid/: __init__.py  config.py  infer.py
src/naime_hybrid/models/: __init__.py  decoder.py  factory.py
src/naime_hybrid/modules/: __init__.py  moe.py  (+9 more)
tests/: test_architecture_forward.py
(+17 files in other folders)
